--- a/map_en.html
+++ b/map_en.html
@@ -113,13 +113,13 @@
         <div id="mobile-menu" class="hidden md:hidden pb-4">
           <div class="flex flex-col space-y-2">
             <a
-              href="#map"
+              href="#"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               Map
             </a>
             <a
-              href="#study"
+              href="study_en.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               Study
