--- a/map_en.html
+++ b/map_en.html
@@ -628,7 +628,7 @@
         if (lang === "EN") {
           window.location.href = "map_en.html";
         } else {
-          window.location.href = "map_he.html";
+          window.location.href = "index.html";
         }
 
         // Hide dropdown
