--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             class="hidden md:flex items-center space-x-8 w-full justify-center text-center"
           >
             <a
-              href="#"
+              href="index.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               מפה
             </a>
             <a
-              href="study_he.html"
+              href="learn_he.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               למידה
@@ -113,13 +113,13 @@
         <div id="mobile-menu" class="hidden md:hidden pb-4">
           <div class="flex flex-col space-y-2">
             <a
-              href="#"
+              href="index.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               מפה
             </a>
             <a
-              href="study_he.html"
+              href="learn_he.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               למידה
@@ -308,7 +308,7 @@
             ry="10"
             filter="url(#softBlur)"
             class="cursor-pointer"
-            onclick="showTooltip(event, 'קובץ רשומות', 'מכיל 32 רשומות כלליות ($0-$31). מספק שני פורטים לקריאה ואחד לכתיבה. הרשומה $0 תמיד מכילה את הערך 0.')"
+            onclick="showTooltip(event, 'אוסף רגיסטרים', 'מכיל 32 רשומות כלליות ($0-$31). מספק שני פורטים לקריאה ואחד לכתיבה. הרשומה $0 תמיד מכילה את הערך 0.')"
           />
 
           <!-- Sign Extend -->
