--- a/learn_he.html
+++ b/learn_he.html
@@ -1347,4 +1347,65 @@
       </section>
     </div>
   </body>
+  <script>
+    let currentLanguage = "HE";
+
+    function toggleMobileMenu() {
+      const mobileMenu = document.getElementById("mobile-menu");
+      const menuIcon = document.getElementById("menu-icon");
+      const closeIcon = document.getElementById("close-icon");
+
+      mobileMenu.classList.toggle("hidden");
+      menuIcon.classList.toggle("hidden");
+      closeIcon.classList.toggle("hidden");
+    }
+
+    function toggleLanguageDropdown() {
+      const dropdown = document.getElementById("language-dropdown");
+      dropdown.classList.toggle("hidden");
+    }
+
+    function selectLanguage(lang) {
+      currentLanguage = lang;
+
+      // Update desktop display
+      document.getElementById("current-lang").textContent = lang;
+
+      // Update mobile buttons
+      const mobileEN = document.getElementById("mobile-en");
+      const mobileHE = document.getElementById("mobile-he");
+
+      if (lang === "EN") {
+        window.location.href = "learn_en.html";
+      } else {
+        window.location.href = "learn_he.html";
+      }
+
+      // Hide dropdown
+      document.getElementById("language-dropdown").classList.add("hidden");
+
+      console.log("Language changed to:", lang);
+    }
+
+    // Close dropdown when clicking outside
+    document.addEventListener("click", function (event) {
+      const dropdown = document.getElementById("language-dropdown");
+      const button = event.target.closest("button");
+
+      if (
+        !button ||
+        !button.onclick ||
+        button.onclick.toString().indexOf("toggleLanguageDropdown") === -1
+      ) {
+        dropdown.classList.add("hidden");
+      }
+    });
+
+    // Close mobile menu when clicking on links
+    document.querySelectorAll("#mobile-menu a").forEach((link) => {
+      link.addEventListener("click", () => {
+        toggleMobileMenu();
+      });
+    });
+  </script>
 </html>
