--- a/map_en.html
+++ b/map_en.html
@@ -15,16 +15,16 @@
             class="hidden md:flex items-center space-x-8 w-full justify-center"
           >
             <a
-              href="#map"
+              href="map_en.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               Map
             </a>
             <a
-              href="#study"
+              href="learn_en.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
-              Study
+              Learn
             </a>
 
             <!-- Language Selector -->
@@ -113,16 +113,16 @@
         <div id="mobile-menu" class="hidden md:hidden pb-4">
           <div class="flex flex-col space-y-2">
             <a
-              href="#"
+              href="map_en.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
               Map
             </a>
             <a
-              href="study_en.html"
+              href="learn_en.html"
               class="text-white hover:text-blue-200 px-3 py-2 rounded-md text-lg font-medium transition duration-300 hover:bg-white hover:bg-opacity-20"
             >
-              Study
+              Learn
             </a>
 
             <!-- Mobile Language Selector -->
@@ -597,6 +597,7 @@
         </button>
       </div>
     </div>
+    
     <script>
       let currentLanguage = "EN";
 
